clean up instancing